Activate windows build on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rust:
 os:
   - linux
   - osx
+  - windows
 env:
   matrix:
     - CI_BUILD_FEATURES="bundled"
@@ -23,6 +24,7 @@ install:
 before_script:
   - shopt -s expand_aliases
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then alias pip=pip2; fi
+  - if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install python2; fi
   - |
     pip install 'travis-cargo<0.2' --user &&
     export PATH=$HOME/.local/bin:$PATH &&
